<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ticket_form">

    <EditText
        android:id="@+id/ticketEmail"
        android:layout_width="414dp"
        android:layout_height="65dp"
        android:ems="10"
        android:hint="@string/email_form"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticketLastName"
        app:layout_constraintVertical_bias="0.084" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="1276dp"
        android:layout_height="132dp"
        android:background="#33CC01"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:singleLine="false"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/ticketName"
        android:layout_width="414dp"
        android:layout_height="65dp"
        android:layout_marginTop="112dp"
        android:ems="10"
        android:hint="@string/name_form"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/subjectForm"
        android:layout_width="414dp"
        android:layout_height="65dp"
        android:layout_marginTop="112dp"
        android:ems="10"
        android:hint="@string/subjectForm"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.623"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/ticketLastName"
        android:layout_width="414dp"
        android:layout_height="65dp"
        android:ems="10"
        android:hint="@string/lastName_form"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticketName"
        app:layout_constraintVertical_bias="0.061" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="222dp"
        android:layout_height="54dp"
        android:fontFamily="@font/roboto"
        android:text="@string/ticket_form"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.461" />

    <Spinner
        android:id="@+id/tag_spn"
        android:layout_width="253dp"
        android:layout_height="87dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.223"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticketEmail"
        app:layout_constraintVertical_bias="0.105"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/priority_spn"
        android:layout_width="253dp"
        android:layout_height="87dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticketEmail"
        app:layout_constraintVertical_bias="0.623"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="192dp"
        android:layout_height="48dp"
        android:onClick="onClickCancel"
        android:text="Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/btnSubmitTicket"
        android:layout_width="192dp"
        android:layout_height="48dp"
        android:onClick="onClick"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.874"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <EditText
        android:id="@+id/ticketText"
        android:layout_width="602dp"
        android:layout_height="315dp"
        android:backgroundTint="@color/cardview_light_background"
        android:inputType="textMultiLine"
        android:lines="8"
        android:maxLength="500"
        android:maxLines="10"
        android:minLines="6"
        android:scrollbars="vertical"
        android:gravity="top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.813"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/retrnAdmin"
        android:layout_width="57dp"
        android:layout_height="58dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.928"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <TextView
        android:id="@+id/TagsAnswer"
        android:layout_width="122dp"
        android:layout_height="50dp"
        android:text="Tag"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.742" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="122dp"
        android:layout_height="50dp"
        android:text="Priority"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/priority_spn"
        app:layout_constraintHorizontal_bias="0.613"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.892" />


</androidx.constraintlayout.widget.ConstraintLayout>